퍼블리싱주우웅

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
     <![endif] -->
   <script src="js/respond.min.js"></script>
   <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="js/swiper/swiper.min.css">
+<script src="js/swiper/swiper.min.js"></script>
   <!-- 사용자 지정 -->
   <script src="js/script.js"></script>
   <link rel="stylesheet" href="css/main.css">
@@ -55,7 +57,24 @@
 
 <body>
   <!-- 배너 -->
-  <div class="banner"></div>
+  <div class="banner">
+    <div class="swiper-container sw-banner">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <a href="#" class="banner-1"></a>
+        </div>
+
+        <div class="swiper-slide">
+          <a href="#" class="banner-2"></a>
+        </div>
+
+        <div class="swiper-slide">
+          <a href="#" class="banner-3"></a>
+        </div>
+
+      </div>
+    </div>   
+  </div>
   <div class="wrap">
     <!-- 상단 -->
     <header class="header">
